--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   background-color: #b3e6b3; /* soft green park */
   font-family: sans-serif;
+}
+canvas {
+  display: block;
+  touch-action:none;  /*Prevent scrolling on mobile
 }
